--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,153 +1,2 @@
-
-$primary-font:"Poppins";
-
-$color1:rgb(122,28,139);
-$color2:rgb(197,172,8);
-$color3:rgba($color1,0.5);
-$color4:rgb(246,246,246);
-$color5:rgb(32,32,32);
-$color6:rgba($color2,0.7);
-$bg-image:url("../img/bg.jpg");
-
-
-
-body {
-  font-family: $primary-font, sans-serif;
-
-}
-.weather-card {
-  background-color: $color1;
-  color: $color4;
-  overflow: hidden;
-  display: flex;
-  flex-wrap: wrap;
-  border-radius: 20px;
-
-  .panel-start {
-    background-image:$bg-image ;
-    background-size: cover;
-    background-position: center center;
-    padding: 20px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 50px;
-    flex: 2 0 150px;
-    border-radius: 20px;
-
-    &::before {
-      content: "";
-      background-color: $color1;
-      opacity: 0.3;
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      z-index: 0;
-    }
-    h2,
-    h4,
-    h5 {
-      margin: 0;
-      text-shadow: 0 0 2px $color5;
-    }
-    .date,
-    .temp {
-      position: relative;
-      z-index: 1;
-    }
-    .date {
-      h2 {
-        font-size: 2rem;
-      }
-      h4 {
-        font-size: 0.7rem;
-        font-weight: 400;
-      }
-    }
-    .date {
-      h2 {
-        font-size: 2rem;
-        font-weight: 600;
-      }
-      h5 {
-        font-size: 0.7rem;
-        font-weight: 400;
-      }
-    }
-  }
-  .panel-end {
-    flex: 8 0 260px;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 30px;
-    .status,
-    .days {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    .status {
-      line-height: 25px;
-      li {
-        display: flex;
-        justify-content: space-between;
-      }
-    }
-
-    .days {
-      display: flex;
-      justify-content: space-between;
-
-      li {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 10px;
-
-        span {
-          &:first-child {
-            font-size: 2rem;
-          }
-          &:nth-child(2) {
-            font-size: 0.7rem;
-          }
-        }
-
-        &.active {
-          background-color: antiquewhite;
-          color: rgb(50, 50, 50);
-          border-radius: 15px;
-        }
-      }
-    }
-    .btn-change {
-      border-style: dotted;
-      border-color: $color4;
-      background-image: linear-gradient(
-        90deg,
-        $color2,
-        $color6
-       );
-      padding: 7px;
-      border-radius: 20px;
-      color: $color1;
-      font-size: 1rem;
-      cursor: pointer;
-
-      &:hover {
-       background-image: linear-gradient(
-        90deg,
-        $color6,
-        $color2
-       );
-       color: $color5;
-      }
-    }
-  }
-}
+@use "./common";
+@use "./weather-card" ;
