inheritance in sass

--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -1,4 +1,5 @@
 @use "./variables" as v;
+@use "./mixins" as m;
 
 body {
   font-family: v.$primary-font, sans-serif;
@@ -6,4 +7,20 @@ body {
 
 * {
   box-sizing: border-box;
+}
+
+.btn-base{
+  border-style: dotted;
+  border-color: v.$color4;
+  background-image: linear-gradient(90deg, v.$color2, v.$color6);
+  padding: 7px;
+  @include m.border-radius(20px);
+  color: v.$color1;
+  font-size: 1rem;
+  cursor: pointer;
+
+  &:hover {
+    background-image: linear-gradient(90deg, v.$color6, v.$color2);
+    color: v.$color5;
+  }
 }
