--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,3 +8,4 @@ $color4:rgb(246,246,246);
 $color5:rgb(32,32,32);
 $color6:rgba($color2,0.7);
 $bg-image:url("../img/bg.jpg");
+$vendors: ("", "-web-kit-", "-moz-", "-ms-", "-o-");
